feat(seed,web): derive work from departments, teams from the hierarchy
The seed's Team record held two different ideas at once, a department
and a manager's group, because both were expressed as rows of `teams`.
It splits: a Department is where work comes from, and a team is just a
manager's id, the same rule FeatureBuilder uses. Directory writes no
team rows at all now; ProjectPlanner mints them, one per project, from
the people who actually took its work. That is what the application's
teams table means, so it is derived from the work rather than declared
in front of it.

Real mode mints none, because it writes only the five work tables: a
team id minted there would be a dangling foreign key, which
SeedGeneratorTest caught at import. `projects.team_id` is nullable and
a null says honestly that the seed does not know the project team.

ExportPreparer loses the derivation and keeps what is still needed: it
activates every user and gives each manager the leader role their place
implies, a manager of managers becoming a skill team leader. It falls
from 319 lines to 100, and --joined goes with the rows it stamped.

forecast-web reads `users` alone for its teams and its three permission
predicates; a skill team leader may now run the team of one leader who
reports to them, which is what the matrix always meant to say.

Found on the way: ExportPreparerPropertyTest could never run. Its
DEPARTMENTS list holds a null, and List.of rejects nulls, so the class
failed in its static initialiser every time. Arrays.asList fixes it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018ZfSXAbsGZQpxC8HuZfKc6